
{{{ Bug Fixes

- Horizontal scroll bar was not updated sometimes.

- The code that determines if a selection is being dragged is now much
  more accurate; for example, with rectangular selections is only
  registers a drag if the mouse is actually within the rectangular
  region, not just between the start and end locations in the buffer.

- jEdit did not compile with Java 1.3.

}}}

}}}
{{{ Version 4.2pre8

Thanks to David Moss, Justin Dieters, Kris Kopicki, Ollie Rutherfurd,
Philipp Janda, and Scott Allen for contributing to this release.

{{{ Miscellaneous

- New splash screen (Kris Kopicki).

- Clicking "Reload" in the "Files Changed on Disk" dialog box now
  selects the next buffer. This improves usability.

- Added Alt-key mnemonics to "Files Changed" dialog box
  (Ollie Rutherfurd).

- Alternative caret movement shortcuts (A+a,i,j,k,l,q,x,z) now work
  together with Shift to extend the selection.

- "Using jEdit" section of the jEdit user's guide is now mostly up to
  date for jEdit 4.2.

- Fixed various mistakes in the documentation (Justin Dieters).

}}}
{{{ Scripting

- BeanShell 2.0b1 imported. It has the following improvements over the
  previously-bundled release (1.3.1):

  - Full support for scripted classes that behave exactly the same as
    compiled classes.

  - Java 1.5-style static imports (this does not require Java 1.5). For
    example:

    static import java.lang.Math.*;
    sqrt(4.0);

  - Instance object imports (mix-ins) with the importObject() command.
    For example:

    importObject( new HashMap() );
    put("foo", "bar");
    print( get("foo") ); // prints "bar"

- The ASM bytecode generation library is now bundled with jEdit since it
  is required by BeanShell 2.0.

}}}
{{{ Syntax Highlighting

- Lua syntax highlighting (Philipp Janda)

- SMI-MIB syntax highlighting (Scott Allen).

- Updated Lisp syntax highlighting (Ollie Rutherfurd).

- Added Swig and PSP syntax highlighting (Ollie Rutherfurd).
